[Docs] Capitalize Ray AIR

--- a/doc/source/ray-air/examples/feast_example.ipynb
+++ b/doc/source/ray-air/examples/feast_example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Integrate Ray Air with Feast feature store"
+    "# Integrate Ray AIR with Feast feature store"
    ]
   },
   {
@@ -22,7 +22,7 @@
     "id": "INyNIaeB1Kza"
    },
    "source": [
-    "In this example, we showcase how to use Ray Air with Feast feature store, leveraging both historical features for training a model and online features for inference.\n",
+    "In this example, we showcase how to use Ray AIR with Feast feature store, leveraging both historical features for training a model and online features for inference.\n",
     "\n",
     "The task is adapted from [Feast credit scoring tutorial](https://github.com/feast-dev/feast-aws-credit-scoring-tutorial). In this example, we train a xgboost model and run some prediction on an incoming loan request to see if it is approved or rejected. "
    ]
@@ -1098,8 +1098,8 @@
     "id": "SqPGGd6bEn0x"
    },
    "source": [
-    "## Train XGBoost model using Ray Air Trainer\n",
-    "Ray Air provides a variety of [Trainers](https://docs.ray.io/en/latest/ray-air/getting-started.html#trainer) that are integrated with popular machine learning frameworks. You can train a distributed model at scale leveraging Ray using the intuitive API `trainer.fit()`. The output is a Ray Air [Checkpoint](https://docs.ray.io/en/latest/ray-air/getting-started.html#module-ray.ml.checkpoint), that will seamlessly transfer the workload from training to prediction. Let's take a look!"
+    "## Train XGBoost model using Ray AIR Trainer\n",
+    "Ray AIR provides a variety of [Trainers](https://docs.ray.io/en/latest/ray-air/getting-started.html#trainer) that are integrated with popular machine learning frameworks. You can train a distributed model at scale leveraging Ray using the intuitive API `trainer.fit()`. The output is a Ray AIR [Checkpoint](https://docs.ray.io/en/latest/ray-air/getting-started.html#module-ray.ml.checkpoint), that will seamlessly transfer the workload from training to prediction. Let's take a look!"
    ]
   },
   {
@@ -1294,7 +1294,7 @@
    },
    "source": [
     "## Inference\n",
-    "Now from the Checkpoint object we obtained from last session, we can construct a Ray Air [Predictor](https://docs.ray.io/en/latest/ray-air/getting-started.html#predictors) that encapsulates everything needed for inference.\n",
+    "Now from the Checkpoint object we obtained from last session, we can construct a Ray AIR [Predictor](https://docs.ray.io/en/latest/ray-air/getting-started.html#predictors) that encapsulates everything needed for inference.\n",
     "\n",
     "The API for using Predictor is also very intuitive - simply call `Predictor.predict()`."
    ]
