--- a/doc/source/ray-air/examples/lightgbm_example.ipynb
+++ b/doc/source/ray-air/examples/lightgbm_example.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Training a model with distributed LightGBM\n",
-    "In this example we will train a model in Ray Air using distributed LightGBM."
+    "In this example we will train a model in Ray AIR using distributed LightGBM."
    ]
   },
   {
