--- a/doc/source/ray-air/examples/sklearn_example.ipynb
+++ b/doc/source/ray-air/examples/sklearn_example.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Training a model with Sklearn\n",
-    "In this example we will train a model in Ray Air using a Sklearn classifier."
+    "In this example we will train a model in Ray AIR using a Sklearn classifier."
    ]
   },
   {
