--- a/doc/source/ray-air/examples/xgboost_example.ipynb
+++ b/doc/source/ray-air/examples/xgboost_example.ipynb
@@ -10,7 +10,7 @@
    },
    "source": [
     "# Training a model with distributed XGBoost\n",
-    "In this example we will train a model in Ray Air using distributed XGBoost."
+    "In this example we will train a model in Ray AIR using distributed XGBoost."
    ]
   },
   {
