[AIR] Move `ray.air.preprocessors` to `ray.data`

--- a/doc/source/ray-air/examples/serving_guide.ipynb
+++ b/doc/source/ray-air/examples/serving_guide.ipynb
@@ -165,7 +165,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from ray.air.train.integrations.xgboost import XGBoostTrainer\n",
-    "from ray.air.preprocessors import StandardScaler\n",
+    "from ray.data.preprocessors import StandardScaler\n",
     "\n",
     "data_raw = load_breast_cancer()\n",
     "dataset_df = pd.DataFrame(data_raw[\"data\"], columns=data_raw[\"feature_names\"])\n",
