--- a/doc/source/ray-air/examples/tfx_tabular_train_to_serve.ipynb
+++ b/doc/source/ray-air/examples/tfx_tabular_train_to_serve.ipynb
@@ -472,7 +472,7 @@
    },
    "outputs": [],
    "source": [
-    "from ray.air.preprocessors import (\n",
+    "from ray.data.preprocessors import (\n",
     "    BatchMapper,\n",
     "    Chain,\n",
     "    OneHotEncoder,\n",
