--- a/doc/source/ray-air/examples/torch_incremental_learning.ipynb
+++ b/doc/source/ray-air/examples/torch_incremental_learning.ipynb
@@ -590,7 +590,7 @@
    },
    "outputs": [],
    "source": [
-    "from ray.air.preprocessors import BatchMapper\n",
+    "from ray.data.preprocessors import BatchMapper\n",
     "\n",
     "from torchvision import transforms\n",
     "\n",
