Add missing piece of code

--- a/doc/source/ray-core/examples/highly_parallel.ipynb
+++ b/doc/source/ray-core/examples/highly_parallel.ipynb
@@ -240,7 +240,11 @@
    "source": [
     "FULL_SAMPLE_COUNT = 100 * 1000 * 1000 * 1000 # 100 billion samples! \n",
     "BATCHES = int(FULL_SAMPLE_COUNT / SAMPLE_COUNT)\n",
-    "print(f'Doing {BATCHES} batches')"
+    "print(f'Doing {BATCHES} batches')\n",
+    "results = []\n",
+    "for _ in range(BATCHES):\n",
+    "    results.append(pi4_sample.remote())\n",
+    "output = ray.get(results)"
    ]
   },
   {
