Add suggested changes from Sang.

--- a/doc/source/ray-core/examples/highly_parallel.ipynb
+++ b/doc/source/ray-core/examples/highly_parallel.ipynb
@@ -23,7 +23,8 @@
     "The algorithm is simple: generate random x and y, and if ``x^2 + y^2 < 1``, it's\n",
     "inside the circle, we count as in. This actually turns out to be pi/4\n",
     "(remembering your high school math).\n",
-    "\n"
+    "\n",
+    "The following code (and this notebook) assumes you have already set up your Ray cluster and that you are running on the head node. For more details on how to set up a Ray cluster please see the [Ray Cluster Quickstart Guide](https://docs.ray.io/en/master/cluster/quickstart.html). \n"
    ]
   },
   {
@@ -84,7 +85,7 @@
    ],
    "source": [
     "# Let's start Ray\n",
-    "ray.init()"
+    "ray.init(address='auto')"
    ]
   },
   {
