[AIR/data] Move preprocessors to `ray.data` (#25599)
Moves ray.air.Preprocessor and ray.air.preprocessors to ray.data to converge on the agreed upon package structure discussed internally.

--- a/doc/source/ray-air/examples/sklearn_example.ipynb
+++ b/doc/source/ray-air/examples/sklearn_example.ipynb
@@ -56,7 +56,7 @@
     "from ray.data.dataset import Dataset\n",
     "from ray.air.batch_predictor import BatchPredictor\n",
     "from ray.air.predictors.integrations.sklearn import SklearnPredictor\n",
-    "from ray.air.preprocessors import Chain, OrdinalEncoder, StandardScaler\n",
+    "from ray.data.preprocessors import Chain, OrdinalEncoder, StandardScaler\n",
     "from ray.air.result import Result\n",
     "from ray.train.sklearn import SklearnTrainer\n",
     "\n",
