--- a/doc/source/ray-air/examples/xgboost_example.ipynb
+++ b/doc/source/ray-air/examples/xgboost_example.ipynb
@@ -69,7 +69,7 @@
     "from ray.train.xgboost import XGBoostTrainer\n",
     "from ray.data.dataset import Dataset\n",
     "from ray.air.result import Result\n",
-    "from ray.air.preprocessors import StandardScaler\n",
+    "from ray.data.preprocessors import StandardScaler\n",
     "from sklearn.datasets import load_breast_cancer\n",
     "from sklearn.model_selection import train_test_split"
    ]
