--- a/doc/source/ray-air/examples/huggingface_text_classification.ipynb
+++ b/doc/source/ray-air/examples/huggingface_text_classification.ipynb
@@ -1368,7 +1368,7 @@
         }
       ],
       "source": [
-        "from ray.air.predictors.integrations.huggingface import HuggingFacePredictor\n",
+        "from ray.train.huggingface import HuggingFacePredictor\n",
         "from ray.air.batch_predictor import BatchPredictor\n",
         "import pandas as pd\n",
         "\n",
