--- a/doc/source/ray-air/examples/lightgbm_example.ipynb
+++ b/doc/source/ray-air/examples/lightgbm_example.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "import ray\n",
     "from ray.air.batch_predictor import BatchPredictor\n",
-    "from ray.air.predictors.integrations.lightgbm import LightGBMPredictor\n",
+    "from ray.train.lightgbm import LightGBMPredictor\n",
     "from ray.data.preprocessors.chain import Chain\n",
     "from ray.data.preprocessors.encoder import Categorizer\n",
     "from ray.train.lightgbm import LightGBMTrainer\n",
