--- a/doc/source/ray-air/examples/serving_guide.ipynb
+++ b/doc/source/ray-air/examples/serving_guide.ipynb
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following block serves a Ray AIR model from a [checkpoint](ray.air.checkpoint), using the built-in [`XGBoostPredictor`](ray.air.predictors.integrations.xgboost.XGBoostPredictor)."
+    "The following block serves a Ray AIR model from a [checkpoint](ray.air.checkpoint), using the built-in [`XGBoostPredictor`](ray.train.xgboost.XGBoostPredictor)."
    ]
   },
   {
@@ -223,7 +223,7 @@
     }
    ],
    "source": [
-    "from ray.air.predictors.integrations.xgboost import XGBoostPredictor\n",
+    "from ray.train.xgboost import XGBoostPredictor\n",
     "from ray import serve\n",
     "from ray.serve.model_wrappers import ModelWrapperDeployment\n",
     "from ray.serve.http_adapters import pandas_read_json\n",
