--- a/doc/source/ray-air/examples/xgboost_example.ipynb
+++ b/doc/source/ray-air/examples/xgboost_example.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "import ray\n",
     "from ray.air.batch_predictor import BatchPredictor\n",
-    "from ray.air.predictors.integrations.xgboost import XGBoostPredictor\n",
+    "from ray.train.xgboost import XGBoostPredictor\n",
     "from ray.train.xgboost import XGBoostTrainer\n",
     "from ray.data.dataset import Dataset\n",
     "from ray.air.result import Result\n",
