--- a/doc/source/ray-air/examples/rl_offline_example.ipynb
+++ b/doc/source/ray-air/examples/rl_offline_example.ipynb
@@ -61,7 +61,7 @@
     "import ray\n",
     "from ray.air import Checkpoint\n",
     "from ray.air.config import RunConfig\n",
-    "from ray.air.predictors.integrations.rl.rl_predictor import RLPredictor\n",
+    "from ray.train.rl.rl_predictor import RLPredictor\n",
     "from ray.train.rl.rl_trainer import RLTrainer\n",
     "from ray.air.result import Result\n",
     "from ray.rllib.agents.marwil import BCTrainer\n",
