--- a/doc/source/ray-air/examples/tfx_tabular_train_to_serve.ipynb
+++ b/doc/source/ray-air/examples/tfx_tabular_train_to_serve.ipynb
@@ -821,7 +821,7 @@
    "source": [
     "from ray import serve\n",
     "from ray.air.checkpoint import Checkpoint\n",
-    "from ray.air.predictors.integrations.tensorflow import TensorflowPredictor\n",
+    "from ray.train.tensorflow import TensorflowPredictor\n",
     "from ray.serve.model_wrappers import ModelWrapperDeployment\n",
     "\n",
     "\n",
