--- a/doc/source/ray-air/examples/torch_incremental_learning.ipynb
+++ b/doc/source/ray-air/examples/torch_incremental_learning.ipynb
@@ -629,7 +629,7 @@
    "outputs": [],
    "source": [
     "from ray.air.batch_predictor import BatchPredictor\n",
-    "from ray.air.predictors.integrations.torch import TorchPredictor\n",
+    "from ray.train.torch import TorchPredictor\n",
     "\n",
     "def batch_predict(checkpoint: ray.air.Checkpoint, test_dataset: ray.data.Dataset) -> float:\n",
     "  \"\"\"Perform batch prediction on the provided test dataset, and return accuracy results.\"\"\"\n",
@@ -1236,7 +1236,7 @@
    ],
    "source": [
     "from ray.train.torch import TorchTrainer\n",
-    "from ray.air.predictors.integrations.torch import TorchPredictor\n",
+    "from ray.train.torch import TorchPredictor\n",
     "from ray.air import Checkpoint\n",
     "from ray import serve\n",
     "from ray.serve.model_wrappers import ModelWrapperDeployment\n",
