--- a/doc/source/ray-air/examples/huggingface_text_classification.ipynb
+++ b/doc/source/ray-air/examples/huggingface_text_classification.ipynb
@@ -1369,7 +1369,7 @@
       ],
       "source": [
         "from ray.train.huggingface import HuggingFacePredictor\n",
-        "from ray.air.batch_predictor import BatchPredictor\n",
+        "from ray.train.batch_predictor import BatchPredictor\n",
         "import pandas as pd\n",
         "\n",
         "sentences = ['Bill whistled past the house.',\n",
