--- a/doc/source/ray-air/examples/lightgbm_example.ipynb
+++ b/doc/source/ray-air/examples/lightgbm_example.ipynb
@@ -49,7 +49,7 @@
     "import pandas as pd\n",
     "\n",
     "import ray\n",
-    "from ray.air.batch_predictor import BatchPredictor\n",
+    "from ray.train.batch_predictor import BatchPredictor\n",
     "from ray.train.lightgbm import LightGBMPredictor\n",
     "from ray.data.preprocessors.chain import Chain\n",
     "from ray.data.preprocessors.encoder import Categorizer\n",
