--- a/doc/source/ray-air/examples/serving_guide.ipynb
+++ b/doc/source/ray-air/examples/serving_guide.ipynb
@@ -14,10 +14,10 @@
     "\n",
     "But before that, let's review the key concepts:\n",
     "- [`Checkpoint`](ray.air.checkpoint) represents a trained model stored in memory, file, or remote uri.\n",
-    "- [`Predictor`](ray.air.predictor.Predictor)s understand how to perform a model inference given checkpoints and the model definition. Ray AIR comes with predictors for each supported frameworks. \n",
+    "- [`Predictor`](ray.train.predictor.Predictor)s understand how to perform a model inference given checkpoints and the model definition. Ray AIR comes with predictors for each supported frameworks. \n",
     "- [`Deployment`](serve-key-concepts-deployment) is a Ray Serve construct that represent an HTTP endpoint along with scalable pool of models.\n",
     "\n",
-    "The core concept for deployment is the `ModelWrapper`. The `ModelWrapper` takes a [predictor](ray.air.predictor.Predictor) class and a [checkpoint](ray.air.checkpoint) and transforms them into a live HTTP endpoint. \n",
+    "The core concept for deployment is the `ModelWrapper`. The `ModelWrapper` takes a [predictor](ray.train.predictor.Predictor) class and a [checkpoint](ray.air.checkpoint) and transforms them into a live HTTP endpoint. \n",
     "\n",
     "We'll start with a simple quick-start demo showing how you can use the ModelWrapper to deploy your model for online inference."
    ]
@@ -308,7 +308,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "from ray.air.predictor import Predictor\n",
+    "from ray.train.predictor import Predictor\n",
     "from ray.air.checkpoint import Checkpoint\n",
     "\n",
     "class AdderPredictor(Predictor):\n",
