--- a/doc/source/ray-air/examples/sklearn_example.ipynb
+++ b/doc/source/ray-air/examples/sklearn_example.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "import ray\n",
     "from ray.data.dataset import Dataset\n",
-    "from ray.air.batch_predictor import BatchPredictor\n",
+    "from ray.train.batch_predictor import BatchPredictor\n",
     "from ray.train.sklearn import SklearnPredictor\n",
     "from ray.data.preprocessors import Chain, OrdinalEncoder, StandardScaler\n",
     "from ray.air.result import Result\n",
