--- a/doc/source/ray-air/examples/torch_incremental_learning.ipynb
+++ b/doc/source/ray-air/examples/torch_incremental_learning.ipynb
@@ -628,7 +628,7 @@
    },
    "outputs": [],
    "source": [
-    "from ray.air.batch_predictor import BatchPredictor\n",
+    "from ray.train.batch_predictor import BatchPredictor\n",
     "from ray.train.torch import TorchPredictor\n",
     "\n",
     "def batch_predict(checkpoint: ray.air.Checkpoint, test_dataset: ray.data.Dataset) -> float:\n",
