--- a/doc/source/ray-air/examples/xgboost_example.ipynb
+++ b/doc/source/ray-air/examples/xgboost_example.ipynb
@@ -64,7 +64,7 @@
     "import pandas as pd\n",
     "\n",
     "import ray\n",
-    "from ray.air.batch_predictor import BatchPredictor\n",
+    "from ray.train.batch_predictor import BatchPredictor\n",
     "from ray.train.xgboost import XGBoostPredictor\n",
     "from ray.train.xgboost import XGBoostTrainer\n",
     "from ray.data.dataset import Dataset\n",
