Fix documentation building instructions

--- a/doc/source/ray-contribute/docs.ipynb
+++ b/doc/source/ray-contribute/docs.ipynb
@@ -45,7 +45,7 @@
     "Building the documentation is done by running the following command:\n",
     "\n",
     "```shell\n",
-    "make html\n",
+    "make develop\n",
     "```\n",
     "\n",
     "which will build the documentation into the `_build` directory.\n",
