--- a/doc/source/ray-contribute/docs.ipynb
+++ b/doc/source/ray-contribute/docs.ipynb
@@ -57,6 +57,9 @@
     "with `../scripts/format.sh` from the `doc` folder,\n",
     "to make sure your changes are formatted correctly.\n",
     "\n",
+    "For reproducing CI build failures locally, you might want to use `make html`, which\n",
+    "is the same as `make develop` but treats warnings as errors.\n",
+    "\n",
     "## Building Docs for Apple Silicon (M1)\n",
     "\n",
     "If you are using an Apple Silicon (M1) some of the dependencies required for building the docs don't have binary packages available by default (not available in PyPI).\n",
