keep track of paths

--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "0542d016",
+   "id": "b5b33086",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "667f4d33",
+   "id": "18275abf",
    "metadata": {},
    "source": [
     "# Extracting Information from Documents using Ray Datasets\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8837e1ba",
+   "id": "ca7bfcc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c220ee1",
+   "id": "0735386e",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "72e0cc1f",
+   "id": "a00de2df",
    "metadata": {
     "scrolled": true
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23f07e58",
+   "id": "7d2b5cac",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3897e671",
+   "id": "3b98b090",
    "metadata": {
     "tags": [
      "remove-output"
@@ -120,14 +120,20 @@
    "source": [
     "import os\n",
     "from glob import glob\n",
+    "import pytesseract\n",
+    "\n",
     "files = glob(os.path.expanduser(\"~/LightShot13k/LightShot13k/*\"))\n",
     "ds = ray.data.from_items(files)\n",
-    "results = ds.map(lambda path: pytesseract.image_to_string(path))"
+    "\n",
+    "def perform_ocr(path):\n",
+    "    return {\"path\": path, \"text\": pytesseract.image_to_string(path)}\n",
+    "\n",
+    "results = ds.map(perform_ocr)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7278bb91",
+   "id": "5a93f6c7",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the `take` function."
@@ -136,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e02deb09",
+   "id": "06cff296",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa29085a",
+   "id": "890a7eb7",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -195,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "455f130c",
+   "id": "92a9bfd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87f85981",
+   "id": "ff22d9c7",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -215,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ce953c62",
+   "id": "f7286047",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5dab73d",
+   "id": "0802ab2d",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -257,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c91c98d3",
+   "id": "34eaea82",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9846f42",
+   "id": "22d27e21",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -321,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ded90588",
+   "id": "cfeeb6e7",
    "metadata": {
     "scrolled": true
    },
@@ -455,7 +461,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -469,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
