--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b5b33086",
+   "id": "15acfd57",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18275abf",
+   "id": "f712b3a1",
    "metadata": {},
    "source": [
     "# Extracting Information from Documents using Ray Datasets\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca7bfcc3",
+   "id": "4906af06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0735386e",
+   "id": "14ae8fce",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a00de2df",
+   "id": "0495514d",
    "metadata": {
     "scrolled": true
    },
@@ -99,18 +99,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d2b5cac",
+   "id": "bed3ec58",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
     "\n",
-    "We first create a list `files` of absolute paths of the file names and then convert it into a Ray Dataset with the `ray.data.from_items` function. We can now run the `.map` function on this dataset of file names to run the actual OCR process on each file and convert the screen shots into text."
+    "We first create a list `files` of absolute paths of the file names and then convert it into a Ray Dataset with the `ray.data.from_items` function. We can now run the `.map` function on this dataset of file names to run the actual OCR process on each file and convert the screen shots into text. Note that we only store the paths of the filenames and the OCR'ed text in the dataset to keep the size of the dataset manageble. If you have large binary blobs like images or videos, it can be beneficial to store them outside of the dataset and store only the extracted information in the dataset."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b98b090",
+   "id": "05979440",
    "metadata": {
     "tags": [
      "remove-output"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a93f6c7",
+   "id": "6adeaf0b",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the `take` function."
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "06cff296",
+   "id": "15fdbf06",
    "metadata": {},
    "outputs": [
     {
@@ -190,18 +190,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "890a7eb7",
+   "id": "c8a306a9",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
     "\n",
-    "We can now process the extracted text with spaCy. Let's first make sure the libraries are installed:"
+    "This is the part where the fun begins. Depending on your task there will be different needs for post processing, for example:\n",
+    "- If you are scanning books or articles you might want to separate the text out into sections and paragraphs.\n",
+    "- If you are scanning forms, receipts or checks, you might want to extract the different items listed, as well as extra information for those items like the price, or the total amount listed on the receipt or check.\n",
+    "- If you are scanning legal documents, you might want to extract information like the type of document, who is mentioned in the document and more semantic information about what the document claims.\n",
+    "- If you are scanning medical records, you might want to extract the patient name and the treatment history.\n",
+    "\n",
+    "In our specific example, let's try to determine all the documents in the LightShot dataset that are chat protocols and extract named entities in those documents. We will extract this data with spaCy. Let's first make sure the libraries are installed:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92a9bfd7",
+   "id": "3e7fad2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff22d9c7",
+   "id": "9650e261",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -221,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f7286047",
+   "id": "79b41cfa",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0802ab2d",
+   "id": "0c124b47",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -263,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "34eaea82",
+   "id": "5871928f",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22d27e21",
+   "id": "6a9bb56c",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -327,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "cfeeb6e7",
+   "id": "b3fe237a",
    "metadata": {
     "scrolled": true
    },
