--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "15acfd57",
+   "id": "41e7dd55",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f712b3a1",
+   "id": "f940a5b6",
    "metadata": {},
    "source": [
     "# Extracting Information from Documents using Ray Datasets\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4906af06",
+   "id": "508d19cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14ae8fce",
+   "id": "a99a708d",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0495514d",
+   "id": "85729d8d",
    "metadata": {
     "scrolled": true
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bed3ec58",
+   "id": "ce14f0f6",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05979440",
+   "id": "d0448c56",
    "metadata": {
     "tags": [
      "remove-output"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6adeaf0b",
+   "id": "cc6bc44d",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the `take` function."
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "15fdbf06",
+   "id": "168e653f",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8a306a9",
+   "id": "05ba7ceb",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e7fad2f",
+   "id": "4c0e15d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9650e261",
+   "id": "ccb4992a",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "79b41cfa",
+   "id": "b3e0181a",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c124b47",
+   "id": "f9d06aeb",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "5871928f",
+   "id": "93d86615",
    "metadata": {},
    "outputs": [
     {
@@ -316,15 +316,18 @@
     "        self.nlp.add_pipe('language_detector', last=True)\n",
     "\n",
     "    def __call__(self, row):\n",
+    "        row = dict(row)\n",
     "        doc = self.nlp(row[\"value\"])\n",
-    "        return doc._.language\n",
+    "        row[\"language\"] = doc._.language[\"language\"]\n",
+    "        row[\"score\"] = doc._.language[\"score\"]\n",
+    "        return row\n",
     "\n",
     "results.limit(10).map(SpacyBatchInference, compute=\"actors\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6a9bb56c",
+   "id": "040e16a9",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -333,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b3fe237a",
+   "id": "5ae20687",
    "metadata": {
     "scrolled": true
    },
@@ -460,7 +463,34 @@
     }
    ],
    "source": [
-    "results.map(SpacyBatchInference, compute=\"actors\").groupby(\"language\").count().show()"
+    "languages = results.map(SpacyBatchInference, compute=\"actors\")\n",
+    "languages.groupby(\"language\").count().show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "739d86b4",
+   "metadata": {},
+   "source": [
+    "We can now filter to include only the English documents and also sort them according to their score."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11fc433e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "languages.filter(lambda row: row[\"language\"] == \"en\").sort(\"score\", descending=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca7270ee",
+   "metadata": {},
+   "source": [
+    "If you are interested in this example and want to extend it, you could go throught these results in order, create labels on whether the text is a chat conversation and then train a model like [Huggingface Transformers](https://huggingface.co/docs/transformers/) on the data. Contributions that extend the example in this direction with a PR are welcome!"
    ]
   }
  ],
