--- a/doc/source/ray-air/examples/rl_offline_example.ipynb
+++ b/doc/source/ray-air/examples/rl_offline_example.ipynb
@@ -65,7 +65,7 @@
     "from ray.train.rl.rl_trainer import RLTrainer\n",
     "from ray.air.result import Result\n",
     "from ray.rllib.agents.marwil import BCTrainer\n",
-    "from ray.tune.tuner import Tuner"
+    "from ray.tune.air.tuner import Tuner"
    ]
   },
   {
