--- a/doc/source/tune/examples/horovod_simple.ipynb
+++ b/doc/source/tune/examples/horovod_simple.ipynb
@@ -43,8 +43,8 @@
     "from ray import train\n",
     "from ray import tune\n",
     "from ray.train.horovod import HorovodTrainer\n",
-    "from ray.tune.tune_config import TuneConfig\n",
-    "from ray.tune.tuner import Tuner\n",
+    "from ray.tune.air.tune_config import TuneConfig\n",
+    "from ray.tune.air.tuner import Tuner\n",
     "\n",
     "def sq(x):\n",
     "    m2 = 1.0\n",
