--- a/doc/source/ray-air/examples/analyze_tuning_results.ipynb
+++ b/doc/source/ray-air/examples/analyze_tuning_results.ipynb
@@ -73,8 +73,8 @@
     "from ray import tune\n",
     "from ray.air import RunConfig\n",
     "from ray.train.xgboost import XGBoostTrainer\n",
-    "from ray.tune.tune_config import TuneConfig\n",
-    "from ray.tune.tuner import Tuner"
+    "from ray.tune.air.tune_config import TuneConfig\n",
+    "from ray.tune.air.tuner import Tuner"
    ]
   },
   {
