--- a/doc/source/ray-air/examples/rl_serving_example.ipynb
+++ b/doc/source/ray-air/examples/rl_serving_example.ipynb
@@ -57,7 +57,7 @@
     "from ray.air.result import Result\n",
     "from ray.serve.model_wrappers import ModelWrapperDeployment\n",
     "from ray import serve\n",
-    "from ray.tune.tuner import Tuner"
+    "from ray.tune.air.tuner import Tuner"
    ]
   },
   {
