[AIR][Serve] Rename ModelWrapperDeployment -> PredictorDeployment
Also renamed the file from model_wrappers.py to air_integrations.py

Open to other suggestions

--- a/doc/source/ray-air/examples/torch_image_example.ipynb
+++ b/doc/source/ray-air/examples/torch_image_example.ipynb
@@ -606,10 +606,10 @@
    ],
    "source": [
     "from ray import serve\n",
-    "from ray.serve.model_wrappers import ModelWrapperDeployment\n",
+    "from ray.serve.air_integrations import PredictorDeployment\n",
     "\n",
     "serve.start(detached=True)\n",
-    "deployment = ModelWrapperDeployment.options(name=\"my-deployment\")\n",
+    "deployment = PredictorDeployment.options(name=\"my-deployment\")\n",
     "deployment.deploy(TorchPredictor, latest_checkpoint, batching_params=False, model=Net())"
    ]
   },
