--- a/python/ray/tune/TuneClient.ipynb
+++ b/python/ray/tune/TuneClient.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ray.tune.web_server import TuneClient\n",
+    "from ray.tune.server.web_server import TuneClient\n",
     "\n",
     "manager = TuneClient(tune_address=\"localhost\", port_forward=4321)\n",
     "\n",
