--- a/doc/source/tune/examples/ax_example.ipynb
+++ b/doc/source/tune/examples/ax_example.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "import ray\n",
     "from ray import tune\n",
-    "from ray.tune.suggest.ax import AxSearch"
+    "from ray.tune.search.searcher.ax import AxSearch"
    ]
   },
   {
