--- a/doc/source/tune/examples/bayesopt_example.ipynb
+++ b/doc/source/tune/examples/bayesopt_example.ipynb
@@ -53,7 +53,7 @@
     "import ray\n",
     "from ray import tune\n",
     "from ray.tune.suggest import ConcurrencyLimiter\n",
-    "from ray.tune.suggest.bayesopt import BayesOptSearch"
+    "from ray.tune.search.searcher.bayesopt import BayesOptSearch"
    ]
   },
   {
