--- a/doc/source/tune/examples/bohb_example.ipynb
+++ b/doc/source/tune/examples/bohb_example.ipynb
@@ -72,7 +72,7 @@
     "from ray import tune\n",
     "from ray.tune.suggest import ConcurrencyLimiter\n",
     "from ray.tune.schedulers.hb_bohb import HyperBandForBOHB\n",
-    "from ray.tune.suggest.bohb import TuneBOHB\n",
+    "from ray.tune.search.searcher.bohb import TuneBOHB\n",
     "import ConfigSpace as CS"
    ]
   },
