--- a/doc/source/tune/examples/dragonfly_example.ipynb
+++ b/doc/source/tune/examples/dragonfly_example.ipynb
@@ -77,7 +77,7 @@
     "import ray\n",
     "from ray import tune\n",
     "from ray.tune.suggest import ConcurrencyLimiter\n",
-    "from ray.tune.suggest.dragonfly import DragonflySearch"
+    "from ray.tune.search.searcher.dragonfly import DragonflySearch"
    ]
   },
   {
