--- a/doc/source/tune/examples/flaml_example.ipynb
+++ b/doc/source/tune/examples/flaml_example.ipynb
@@ -58,7 +58,7 @@
     "import ray\n",
     "from ray import tune\n",
     "from ray.tune.suggest import ConcurrencyLimiter\n",
-    "from ray.tune.suggest.flaml import BlendSearch, CFO"
+    "from ray.tune.search.searcher.flaml import BlendSearch, CFO"
    ]
   },
   {
