--- a/doc/source/tune/examples/nevergrad_example.ipynb
+++ b/doc/source/tune/examples/nevergrad_example.ipynb
@@ -56,7 +56,7 @@
     "import nevergrad as ng\n",
     "from ray import tune\n",
     "from ray.tune.suggest import ConcurrencyLimiter\n",
-    "from ray.tune.suggest.nevergrad import NevergradSearch"
+    "from ray.tune.search.searcher.nevergrad import NevergradSearch"
    ]
   },
   {
