--- a/doc/source/tune/examples/skopt_example.ipynb
+++ b/doc/source/tune/examples/skopt_example.ipynb
@@ -58,7 +58,7 @@
     "import skopt\n",
     "from ray import tune\n",
     "from ray.tune.suggest import ConcurrencyLimiter\n",
-    "from ray.tune.suggest.skopt import SkOptSearch"
+    "from ray.tune.search.searcher.skopt import SkOptSearch"
    ]
   },
   {
