--- a/doc/source/tune/examples/hebo_example.ipynb
+++ b/doc/source/tune/examples/hebo_example.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "import ray\n",
     "from ray import tune\n",
-    "from ray.tune.suggest.hebo import HEBOSearch"
+    "from ray.tune.search.searcher.hebo import HEBOSearch"
    ]
   },
   {
