--- a/doc/source/tune/examples/hyperopt_example.ipynb
+++ b/doc/source/tune/examples/hyperopt_example.ipynb
@@ -70,7 +70,7 @@
     "import ray\n",
     "from ray import tune\n",
     "from ray.tune.suggest import ConcurrencyLimiter\n",
-    "from ray.tune.suggest.hyperopt import HyperOptSearch\n",
+    "from ray.tune.search.searcher.hyperopt import HyperOptSearch\n",
     "from hyperopt import hp"
    ]
   },
