--- a/doc/source/tune/examples/optuna_example.ipynb
+++ b/doc/source/tune/examples/optuna_example.ipynb
@@ -58,7 +58,7 @@
     "import ray\n",
     "from ray import tune\n",
     "from ray.tune.suggest import ConcurrencyLimiter\n",
-    "from ray.tune.suggest.optuna import OptunaSearch"
+    "from ray.tune.search.searcher.optuna import OptunaSearch"
    ]
   },
   {
