--- a/doc/source/tune/examples/zoopt_example.ipynb
+++ b/doc/source/tune/examples/zoopt_example.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "import ray\n",
     "from ray import tune\n",
-    "from ray.tune.suggest.zoopt import ZOOptSearch\n",
+    "from ray.tune.search.searcher.zoopt import ZOOptSearch\n",
     "from zoopt import ValueType"
    ]
   },
