--- a/doc/source/tune/examples/flaml_example.ipynb
+++ b/doc/source/tune/examples/flaml_example.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "import ray\n",
     "from ray import tune\n",
-    "from ray.tune.suggest import ConcurrencyLimiter\n",
+    "from ray.tune.search import ConcurrencyLimiter\n",
     "from ray.tune.search.searcher.flaml import BlendSearch, CFO"
    ]
   },
