--- a/doc/source/tune/examples/hyperopt_example.ipynb
+++ b/doc/source/tune/examples/hyperopt_example.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "import ray\n",
     "from ray import tune\n",
-    "from ray.tune.suggest import ConcurrencyLimiter\n",
+    "from ray.tune.search import ConcurrencyLimiter\n",
     "from ray.tune.search.searcher.hyperopt import HyperOptSearch\n",
     "from hyperopt import hp"
    ]
