--- a/doc/source/tune/examples/nevergrad_example.ipynb
+++ b/doc/source/tune/examples/nevergrad_example.ipynb
@@ -55,7 +55,7 @@
     "import ray\n",
     "import nevergrad as ng\n",
     "from ray import tune\n",
-    "from ray.tune.suggest import ConcurrencyLimiter\n",
+    "from ray.tune.search import ConcurrencyLimiter\n",
     "from ray.tune.search.searcher.nevergrad import NevergradSearch"
    ]
   },
