--- a/doc/source/tune/examples/bohb_example.ipynb
+++ b/doc/source/tune/examples/bohb_example.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "import ray\n",
     "from ray import tune\n",
-    "from ray.tune.suggest import ConcurrencyLimiter\n",
+    "from ray.tune.search import ConcurrencyLimiter\n",
     "from ray.tune.schedulers.hb_bohb import HyperBandForBOHB\n",
     "from ray.tune.search.searcher.bohb import TuneBOHB\n",
     "import ConfigSpace as CS"
