--- a/doc/source/tune/examples/skopt_example.ipynb
+++ b/doc/source/tune/examples/skopt_example.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "import skopt\n",
     "from ray import tune\n",
-    "from ray.tune.suggest import ConcurrencyLimiter\n",
+    "from ray.tune.search import ConcurrencyLimiter\n",
     "from ray.tune.search.searcher.skopt import SkOptSearch"
    ]
   },
