--- a/doc/source/tune/examples/mxnet_example.ipynb
+++ b/doc/source/tune/examples/mxnet_example.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "from ray import tune, logger\n",
     "from ray.tune.integration.mxnet import TuneCheckpointCallback, TuneReportCallback\n",
-    "from ray.tune.schedulers import ASHAScheduler\n",
+    "from ray.tune.search.schedulers import ASHAScheduler\n",
     "\n",
     "\n",
     "def train_mnist_mxnet(config, mnist, num_epochs=10):\n",
