--- a/doc/source/tune/examples/pbt_ppo_example.ipynb
+++ b/doc/source/tune/examples/pbt_ppo_example.ipynb
@@ -43,7 +43,7 @@
     "import random\n",
     "\n",
     "from ray import tune\n",
-    "from ray.tune.schedulers import PopulationBasedTraining\n",
+    "from ray.tune.search.schedulers import PopulationBasedTraining\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "\n",
