--- a/doc/source/tune/examples/tune-pytorch-lightning.ipynb
+++ b/doc/source/tune/examples/tune-pytorch-lightning.ipynb
@@ -249,7 +249,7 @@
     "from pytorch_lightning.loggers import TensorBoardLogger\n",
     "from ray import tune\n",
     "from ray.tune import CLIReporter\n",
-    "from ray.tune.schedulers import ASHAScheduler, PopulationBasedTraining\n",
+    "from ray.tune.search.schedulers import ASHAScheduler, PopulationBasedTraining\n",
     "from ray.tune.integration.pytorch_lightning import TuneReportCallback, \\\n",
     "    TuneReportCheckpointCallback"
    ]
