--- a/doc/source/tune/examples/tune-pytorch-cifar.ipynb
+++ b/doc/source/tune/examples/tune-pytorch-cifar.ipynb
@@ -74,7 +74,7 @@
     "import torchvision.transforms as transforms\n",
     "import ray\n",
     "from ray import tune\n",
-    "from ray.tune.schedulers import ASHAScheduler"
+    "from ray.tune.search.schedulers import ASHAScheduler"
    ]
   },
   {
