--- a/doc/source/tune/examples/tune-xgboost.ipynb
+++ b/doc/source/tune/examples/tune-xgboost.ipynb
@@ -480,7 +480,7 @@
     "import sklearn.datasets\n",
     "import sklearn.metrics\n",
     "import os\n",
-    "from ray.tune.schedulers import ASHAScheduler\n",
+    "from ray.tune.search.schedulers import ASHAScheduler\n",
     "from sklearn.model_selection import train_test_split\n",
     "import xgboost as xgb\n",
     "\n",
