--- a/doc/source/tune/examples/lightgbm_example.ipynb
+++ b/doc/source/tune/examples/lightgbm_example.ipynb
@@ -37,7 +37,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from ray import tune\n",
-    "from ray.tune.search.schedulers import ASHAScheduler\n",
+    "from ray.tune.search.scheduler import ASHAScheduler\n",
     "from ray.tune.integration.lightgbm import TuneReportCheckpointCallback\n",
     "\n",
     "\n",
