--- a/doc/source/tune/examples/pbt_transformers.ipynb
+++ b/doc/source/tune/examples/pbt_transformers.ipynb
@@ -44,7 +44,7 @@
     "    download_data,\n",
     "    build_compute_metrics_fn,\n",
     ")\n",
-    "from ray.tune.search.schedulers import PopulationBasedTraining\n",
+    "from ray.tune.search.scheduler import PopulationBasedTraining\n",
     "from transformers import (\n",
     "    glue_tasks_num_labels,\n",
     "    AutoConfig,\n",
