--- a/doc/source/tune/examples/tune-serve-integration-mnist.ipynb
+++ b/doc/source/tune/examples/tune-serve-integration-mnist.ipynb
@@ -152,7 +152,7 @@
     "from ray import tune, serve\n",
     "from ray.serve.exceptions import RayServeException\n",
     "from ray.tune import CLIReporter\n",
-    "from ray.tune.search.schedulers import ASHAScheduler\n",
+    "from ray.tune.search.scheduler import ASHAScheduler\n",
     "\n",
     "from torch.utils.data import random_split, Subset\n",
     "from torchvision.datasets import MNIST\n",
