--- a/doc/source/tune/examples/tune_mnist_keras.ipynb
+++ b/doc/source/tune/examples/tune_mnist_keras.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "import ray\n",
     "from ray import tune\n",
-    "from ray.tune.search.schedulers import AsyncHyperBandScheduler\n",
+    "from ray.tune.search.scheduler import AsyncHyperBandScheduler\n",
     "from ray.tune.integration.keras import TuneReportCallback\n",
     "\n",
     "\n",
