--- a/doc/source/tune/examples/bohb_example.ipynb
+++ b/doc/source/tune/examples/bohb_example.ipynb
@@ -71,7 +71,7 @@
     "import ray\n",
     "from ray import tune\n",
     "from ray.tune.search import ConcurrencyLimiter\n",
-    "from ray.tune.search.schedulers.hb_bohb import HyperBandForBOHB\n",
+    "from ray.tune.search.scheduler.hb_bohb import HyperBandForBOHB\n",
     "from ray.tune.search.searcher.bohb import TuneBOHB\n",
     "import ConfigSpace as CS"
    ]
