--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "467aff46",
+   "id": "9c93fcdf",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e52fba50",
+   "id": "a7854811",
    "metadata": {},
    "source": [
     "# Extracting Information from Documents using Ray Datasets\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a99a25dc",
+   "id": "b3510c04",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "87fbaa64",
+   "id": "52d502d7",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18f33035",
+   "id": "b73e8dfb",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a4c383bd",
+   "id": "e8a1fad3",
    "metadata": {
     "tags": [
      "remove-output"
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b980f72",
+   "id": "d602a9ba",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the `take` function."
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d519152c",
+   "id": "c8390bd0",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e1941d4",
+   "id": "d888a77c",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3260894",
+   "id": "087023b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d612db6",
+   "id": "dae86170",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3d85e4ed",
+   "id": "69754a62",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b4be286",
+   "id": "ac325522",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bedeafdc",
+   "id": "6448eae0",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "293a00f2",
+   "id": "56e94e9e",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c3de10fc",
+   "id": "a537a59d",
    "metadata": {
     "scrolled": true
    },
@@ -361,12 +361,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71fb7e63",
+   "id": "e309c03e",
    "metadata": {},
    "source": [
     "````{note}\n",
     "On the full LightShot dataset, you would get the following:\n",
-    "```\n",
+    "```text\n",
     "{'language': 'UNKNOWN', 'count()': 2815}\n",
     "{'language': 'af', 'count()': 109}\n",
     "{'language': 'ca', 'count()': 268}\n",
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecb4a15b",
+   "id": "3c7c12c4",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "430af499",
+   "id": "4a6d4f37",
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fb813ad",
+   "id": "80d37e37",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
