[AIR] Remove unnecessary pandas from examples

--- a/doc/source/ray-air/examples/huggingface_text_classification.ipynb
+++ b/doc/source/ray-air/examples/huggingface_text_classification.ipynb
@@ -1384,8 +1384,7 @@
         ")\n",
         "data = ray.data.from_pandas(pd.DataFrame(sentences, columns=[\"sentence\"]))\n",
         "prediction = predictor.predict(data)\n",
-        "prediction = prediction.to_pandas()\n",
-        "prediction"
+        "prediction.show()"
       ]
     },
     {
